Set background div position to "fixed" to hide overflow

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 #background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -57,7 +57,6 @@ body {
   -webkit-background-size: cover;
   -webkit-filter: blur(8px);
   transform: scale(1.02);
-  overflow: hidden;
 }
 
 input {
